Fixing anystretch bug

--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -488,7 +488,7 @@ h2 {
 }
 
 .anystretch {
-	z-index: 0 !important;
+	z-index: 10 !important;
 }
 
 
